--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,7 @@ buildscript {
 
 allprojects {
     repositories {
+        maven{url"https://maven.google.com"}
         jcenter()
         maven { url "https://raw.github.com/bmob/bmob-android-sdk/master" }
     }
